# cuts

./: .gitignore  README.md  pyproject.toml
configs/: default.toml
docs/: model-licensing.md
src/cuts/: __init__.py  cli.py  config.py  domain.py  edl.py  graph.py  pipeline.py  render.py
src/cuts/nodes/: __init__.py  assemble.py  beats.py  ingest.py  motion.py  reframe.py  sequence.py  shots.py  silence.py  transcribe.py  vibe.py
src/cuts/vlm/: __init__.py  cache.py  client.py  gemini.py  mock.py  models.py
src/cuts/web/: __init__.py  __main__.py  app.py  schemas.py  service.py
tests/: test_assemble.py  test_brain.py  test_edl.py  test_graph.py  test_pipeline.py  test_reframe.py  test_render.py  test_web.py
tests/demos/: README.md
